--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<title>وقت الصلاة</title>
 </head>
  <body>
-	<h1>Weather App</h1>
+	<h1>أ,قات الصلاة</h1>
 	<p id="location"></p>
-	<p id="temperature"></p>
+	
 	<p id="description"></p> 
-    <h1>وقت الصلاة</h1>
+    
   <div id="prayer-times"></div>
   
 	<script>
 		 const locationPara = document.getElementById("location");
-		 const temperaturePara = document.getElementById("temperature");
+		// const temperaturePara = document.getElementById("temperature");
 		 const descriptionPara = document.getElementById("description");
 
 		// check if geolocation is supported
