--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Get Prayer Times using Geolocation API</title>
+    <title>أوقات الصلوات</title>
   </head>
   <body>
     <h1>Your Geolocation API</h1>
